<resources>
    <string name="app_name">F+HCoach</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_terms_and_condition">TermsAndCondition</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_coach_login">CoachLoginActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_forgot_password">ForgotPassword</string>
    <string name="title_activity_goal_consultation_room">GoalConsultationRoomActivity</string>
    <string name="title_activity_answers">AnswersActivity</string>
    <string name="title_activity_coach_list">CoachListActivity</string>
    <string name="title_activity_coach_profile">CoachProfileActivity</string>
    <string name="title_activity_edit_coach_profile">EditCoachProfileActivity</string>
    <string name="title_activity_edit_coach_availabilty">EditCoachAvailabiltyActivity</string>
    <string name="Drawer_open">Open the Drawer</string>
    <string name="Drawer_close">Close the Drawer</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="title_activity_buy_token">BuyTokenActivity</string>
    <string name="lbl_time">All classes are made in Greenwich Mean Time (GMT). Please calculate your time zone to match with GMT before booking.</string>
    <string name="txt_net_rec">For Group Video high  broadband recommended</string>
    <string name="txt_disc">All prices are discounted and may be subject to change at times.</string>
    <string name="txt_internet">For Group Video use broadband internet.</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="invalid_email">This email address is invalid</string>

    <string name="invalid_password">Password is too short</string>
    <string name="incorrect_password">Password is incorrect</string>
    <string name="email_required">Email is required</string>
    <string name="pswrd_required">Password is required</string>
    <string name="phone_required">Phone Number is too short</string>
    <string name="userName_required">User Name is required</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_coach_detail">CoachDetailActivity</string>
    <string name="title_activity_booking_form">BookingFormActivity</string>
    <string name="title_activity_tracking_progress">TrackingProgressActivity</string>
    <string name="title_activity_input_weight_detail">InputWeightDetailActivity</string>
    <string name="title_activity_change_password_fragment">ChangePasswordFragment</string>
    <string name="title_activity_coach_availability_fragment">CoachAvailabilityFragment</string>
    <string name="title_activity_twitter_home">TwitterHomeActivity</string>


    <string name="settings">Settings</string>

    <string name="join">Join</string>
    <string name="sessionId">Conference ID:</string>
    <string name="sdkVersion">SDK Version:</string>
    <string name="appId">App ID:</string>
    <string name="avsIp">AVS IP:</string>
    <string name="settings_screen_name">Settings</string>
    <string name="ooVooTag">ooVooSample</string>
    <string name="ooVooUserSettings">ooVooUserSettings</string>
    <string name="activeUsers">Active Users:</string>
    <string name="information_screen_name">Information</string>
    <string name="video_call_screen_name">Video Call</string>
    <string name="volume">Volume</string>
    <string name="log_visibility">LogVisibility</string>
    <string name="enter_effect_key">EnterEffect</string>
    <string name="exit_effect_key">ExitEffect</string>
    <string name="camera">C</string>
    <string name="microphone">M</string>
    <string name="speakers">S</string>
    <string name="end_of_call">E</string>
    <string name="session_id_settings_field">SessionID</string>
    <string name="avs_ip_settings_field">AvsIP</string>
    <string name="appIdPersisted">AppId</string>
    <string name="appTokenPersisted">AppToken</string>
    <string name="camera_type_settings_field">CameraType</string>
    <string name="microphone_type_settings_field">MicrophoneType</string>
    <string name="speakers_type_settings_field">SpeakersType</string>
    <string name="usrID">User ID:</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="alerts">Alerts</string>
    <string name="message_field_hint">"Write here"</string>
    <string name="message_button_send">"Send"</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="CloseAlertButtonCaption">Close</string>
    <string name="resolution">Resolution</string>
    <string name="displayName">Display Name:</string>
    <string name="appToken">App Token:</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_information">Information</string>
    <string name="title_me">Me</string>
    <string name="please_wait">Please wait...</string>
    <string name="info_participants">Participants:</string>
    <string name="video_error_msg">Video cannot be viewed.</string>
    <string name="settings_base_url">Base URL:</string>
    <string name="base_url_settings_field">BaseURL</string>
    <string name="log_level">"SDK Log Level"</string>
    <string name="initialization_wait">"Initialization, please wait"</string>
    <string name="change_camera">"Change camera"</string>
    <string name="front_camera">"Front camera"</string>
    <string name="back_camera">"Back camera"</string>
    <string name="mute_camera">"Mute camera"</string>
    <string name="low">"Low"</string>
    <string name="med">"Med"</string>
    <string name="hi">"Hi"</string>
    <string name="hd">"HD"</string>
    <string name="audio_routes">"Audio Routes"</string>
    <string name="title_activity_coach_answer">CoachAnswerActivity</string>
    <string name="select">Select Type</string>
    <string name="title_activity_give_answer">GiveAnswerActivity</string>
    <string name="username_label">Username:</string>
    <string name="login_title">Log in</string>
    <string name="conference_id_label">Conference ID:</string>
    <string name="display_name_label">Display Name:</string>
    <string name="join_title">Join</string>
    <string name="app_id">App ID:</string>
    <string name="app_token">App Token:</string>
    <string name="sdk_version">SDK Version:</string>
    <string name="authorizing">Authorizing</string>
    <string name="logging_in">Logging in</string>
    <string name="joining_av_chat">Joining AV chat</string>
    <string name="me">Me</string>
    <string name="filters">Filters</string>
    <string name="enter_session_id">Enter conference id</string>
    <string name="enter_display_name">Enter display name</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_conference_id_and_display_name">Please enter conference id and display name</string>
    <string name="enter_username_toast">Please enter username</string>
    <string name="no_internet">No Internet Connection. Please check your internet connection or try again later.</string>
    <string name="enter_conference_id">Enter conference ID</string>
    <string name="wrong_conference_id">Conference ID is not valid</string>
    <string name="enter_conference_display_name">Enter display name</string>
    <string name="session_id">Session ID</string>
    <string name="join_session">Join Session</string>
    <string name="display_name_too_long">Display name is too long</string>
    <string name="wrong_username_id">Username is not valid</string>
    <string name="video_cannot_be_viewed">Video cannot be viewed!</string>
    <string name="device_is_not_supported">Device is not supported!</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_coach_home">CoachHomeActivity</string>
    <string name="title_activity_survey">SurveyActivity</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="title_activity_coach_list_fragment">CoachListFragment</string>

</resources>
