<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:fillViewport="true" >

	<TableLayout
	 	android:paddingTop="@dimen/main_padding"
		android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
		
		<TableRow>
	                            
			<TextView
				android:layout_width="wrap_content"
				android:text="@string/conference_id_label"
				android:textColor="@color/text_field_color"
				android:layout_marginLeft="@dimen/main_margin"
				android:gravity="center_vertical"
				android:textAppearance="?android:attr/textAppearanceMedium">
			</TextView>
			
			<EditText
				android:id="@+id/session_field"
				android:layout_height="wrap_content"
				android:layout_marginLeft="@dimen/main_margin"
				android:layout_marginRight="@dimen/main_margin"
				android:inputType="none"
				android:singleLine="true" 
				android:layout_width="0dp"
    			android:layout_weight="1"
                android:editable="false"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/enter_session_id"
    			android:textColorHint="@color/hint_color"
				android:textAppearance="?android:attr/textAppearanceMedium" >

			</EditText>
		  
		</TableRow>
		<TableRow>
	                            
			<TextView
				android:layout_width="wrap_content"
				android:text="@string/display_name_label"
				android:textColor="@color/text_field_color"
				android:layout_marginLeft="@dimen/main_margin"
				android:gravity="center_vertical"
				android:textAppearance="?android:attr/textAppearanceMedium">
			</TextView>
			
			<EditText
				android:id="@+id/displayname_field"
				android:layout_height="wrap_content"
				android:layout_marginLeft="@dimen/main_margin"
				android:layout_marginRight="@dimen/main_margin"
				android:inputType="none"
				android:singleLine="true" 
				android:layout_width="0dp"
    			android:layout_weight="1"
                android:focusable="false"
    			android:hint="@string/enter_display_name"
    			android:textColorHint="@color/hint_color"
                android:editable="false"
                android:clickable="false"
                android:cursorVisible="false"

                android:focusableInTouchMode="false"
				android:textAppearance="?android:attr/textAppearanceMedium" >

			</EditText>
		  
		</TableRow>
		<TableRow 
		    android:layout_marginTop="@dimen/main_margin"
		    android:gravity="center">
			<Button
				android:id="@+id/join_button"
				android:layout_width="fill_parent"
				android:layout_marginLeft="@dimen/main_margin"
				android:layout_marginRight="@dimen/main_margin"
				android:text="@string/join_title"
                android:textColor="@color/caldroid_white"
                android:background="@color/primary"
				android:layout_weight="1"
				android:clickable="true">
			</Button>  
		</TableRow>
	                
	</TableLayout>

	<com.erginus.fithealthy.ui.VideoPanelPreviewRect
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="vertical"
	    android:gravity="center"
	    android:id="@+id/preview_rect"
	    android:fillViewport="true" >
		<FrameLayout
			android:layout_centerInParent="true"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:padding="@dimen/main_margin"
		    android:orientation="vertical" >
			<com.oovoo.sdk.api.ui.VideoPanel
			    android:id="@+id/preview_view"
			    android:layout_width="fill_parent"
			    android:layout_height="fill_parent"
			    android:isScrollContainer="false">
			</com.oovoo.sdk.api.ui.VideoPanel>
			
			<TextView
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_gravity="top"
		        android:gravity="center"
		        android:text="@string/me"
		        android:textColor="@android:color/white"
		        android:background="@color/black_overlay"/>
		</FrameLayout>
	</com.erginus.fithealthy.ui.VideoPanelPreviewRect>

</LinearLayout>
